--- a/src/ec2/statistics-webpage/views/tilerow.ejs
+++ b/src/ec2/statistics-webpage/views/tilerow.ejs
@@ -1,10 +1,10 @@
 <div class="tilerow">
     <div class="tile">
-        <h2>999</h2>
+        <h2><%- puntoscarga.length %></h2>
         <h3>cargadores</h3>
     </div>
     <div class="tile">
-        <h2>150</h2>
+        <h2><%- electrolineras.length %></h2>
         <h3>estaciones</h3>
     </div>
     <div class="tile">
