Relleno de credenciales con despliega.sh y modificación de campos de las tablas rellenadas

--- a/src/ec2/statistics-webpage/views/index/index.ejs
+++ b/src/ec2/statistics-webpage/views/index/index.ejs
@@ -40,12 +40,12 @@
 
         electrolineras.forEach(elec => {
             new L.Marker(
-                [Number(elec.latitud.N), Number(elec.longitud.N)],
+                [Number(elec.ubic_lat.N), Number(elec.ublic_lon.N)],
                 {
                     icon: L.ExtraMarkers.icon({
                         icon: 'fa-number',
                         markerColor: 'green',
-                        number: parseInt(elec.estaciones.N)
+                        number: parseInt(elec.puntos_de_carga.N)
                     })
                 }).addTo(map);
         });
