--- a/src/ec2/statistics-webpage/views/nav.ejs
+++ b/src/ec2/statistics-webpage/views/nav.ejs
@@ -1,8 +1,7 @@
 <nav>
     <ul>
-        <a href="."><img class="logo" src="./images/logo.webp" alt=""></a>
-        <li><a href="./poc">Puntos de recarga</a></li>
-        <li><a href="./changestation">Estaciones</a></li>
-        <li><a href="./statistics">Estadisticas</a></li>
+        <a href="/"><img class="logo" src="/images/logo.webp" alt=""></a>
+        <li><a href="/chargestation">Estaciones</a></li>
+        <li><a href="/statistics">Estadisticas</a></li>
     </ul>
 </nav>
