Los puntos de carga se inicializan en estado libre y solventado error que mostraba las estadísticas desordenadas

--- a/src/ec2/statistics-webpage/views/statistics/index.ejs
+++ b/src/ec2/statistics-webpage/views/statistics/index.ejs
@@ -37,6 +37,8 @@
             }
         });
         estadisticas = estadisticas.slice(0, 30);
+        //Ordena estadisticas por fecha
+        estadisticas.sort((a, b) => a.datetime - b.datetime);
 
         const ctx = document.getElementById('myChart').getContext('2d');
 
